[gd_scene load_steps=6 format=2]

[ext_resource path="res://Theme/UI-Tittle-theme.tres" type="Theme" id=1]
[ext_resource path="res://Theme/UI-Button-theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/Button-Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Menu.gd" type="Script" id=4]
[ext_resource path="res://UI/Backgraund.png" type="Texture" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BK" type="TextureRect" parent="."]
modulate = Color( 0.67, 0.67, 0.67, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 276.0
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Martela,
Martel√£o!"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 1820.0
margin_bottom = 980.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 710.0
margin_right = 1110.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 700 )
theme = ExtResource( 2 )
custom_constants/separation = 20
alignment = 1

[node name="Play" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 180.0
margin_right = 400.0
margin_bottom = 280.0
text = "Jogar"

[node name="About" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 300.0
margin_right = 400.0
margin_bottom = 400.0
text = "Sobre"

[node name="Exit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 420.0
margin_right = 400.0
margin_bottom = 520.0
text = "Sair"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
